[package]
name = "wgpu_bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"     #Not WGPU, but typical window for Rust
wgpu = "0.19.3"       #latest version
env_logger = "0.11.3" #perhaps not the best, but we'll use for now
