[package]
name = "square_homage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"                                      #Not WGPU, but typical window for Rust
wgpu = "0.19.3"                                        #latest version
env_logger = "0.11.3"                                  #perhaps not the best, but we'll use for now
tokio = { version = "1.37.0", features = ["rt", "macros"] }
bytemuck = { version = "1.15", features = ["derive"] }
log = "0.4.21"
cfg-if = "1.0.0"
rand = "0.8.5"
colorsys = "0.6.7"

[lib]
crate-type = ["cdylib", "rlib"]

[target."cfg(target_arch = \"wasm32\")".dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element", "UrlSearchParams", "Location"] }
wgpu = { version = "0.19.3", features = ["webgl"] }
cfg-if = "1.0.0"
getrandom = { version = "0.2.14", features = ["js"] }
